Fixed into image resizing issue and changed hamburger on mobile to black

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,14 +7,14 @@ body {
   width: 100%;
   height: 500px;
   position: relative;
-  background-position: center;
-  /* Make the background image cover the area of the <div>, and clip the excess */
-  background-size: cover;
 }
 
 .intro img {
   width: 100%;
   height: 500px;
+  /* position: relative;
+  background-position: center; */
+  object-fit: cover;
 }
 
 .intro span {
